...
import com.tasa.ui.screens.authentication.components.PasswordTextField
import com.tasa.ui.screens.authentication.components.UsernameTextField

private const val USERNAME_TO_PASSWORD_PADDING = 8
private const val TEXT_FIELD_WIDTH_FACTOR = 0.6f

const val LOGIN_USERNAME_TEXT_FIELD = "login_username_text_fields"
const val LOGIN_PASSWORD_TEXT_FIELD = "login_password_text_fields"

/**
 * The text fields for the login operation on the login page:
 * - Username field
 * - Password field
 *
...
